--- a/aq_table_for_website.html
+++ b/aq_table_for_website.html
@@ -46,6 +46,36 @@
         text-align: center;
     }
     </style>
+    <!-- Dropdown selector for lease status  -->
+    <p>
+        <form name="formSelectors">
+            <label for="selStatus" style="font-size: 9pt">Select Lease Status:</label>
+            <select name="selStatus" id="selStatus" onchange="ChangeStatus()" style="font-size: 9pt">
+                <option selected="selected" value="A">Active</option>
+                <option value="E">Expired</option>
+                <option value="P">Renewal or Standard Application Pending</option>
+                <option value="T">Terminated</option>
+                <option value="">All</option>
+            </select>
+            <label for="selType" style="font-size: 9pt">Select Lease Type:</label>
+            <select name="selType" id="selType" onchange="ChangeType()" style="font-size: 9pt">
+                <option selected="selected" value="">All</option>
+                <option value="S">Shellfish</option>
+                <option value="E">Experimental</option>
+                <option value="F">Finfish</option>
+                <option value="W">Seaweed</option>
+                <option value="D">Standard</option>
+            </select>
+        </form>
+    </p>
+    <style type="text/css" class="init">
+    tfoot input {
+        width: 100%;
+        font-size: 8pt;
+        padding: 1px;
+        box-sizing: border-box;
+    }
+    </style>
     <!-- Set table ID here and build HTML table. Use DataTables CSS options from https://datatables.net/manual/styling/classes
 or use class = "custom_table" if only using CSS defined in custom CSS above  -->
     <table id="lease_table" class="dataTable" cellspacing="0" width="100%">
@@ -76,16 +106,22 @@ or use class = "custom_table" if only using CSS defined in custom CSS above  -->
         <tbody>
         </tbody>
     </table>
+    <div id="totalAcreage"></div>
     <!-- JavaScript to populate table starts here -->
     <script type='text/javascript'>
+    jQuery.fn.dataTable.Api.register('sum()', function() {
+        return this.flatten().reduce(function(a, b) {
+            return (a * 1) + (b * 1); // cast values in-case they are strings
+        });
+    });
+
+
     $(document).ready(function() {
         // Setup - add a text input to each footer cell. Omit this if no search fields needed.
         $('#lease_table tfoot th').each(function() { // Change table element ID here
             var title = $('#lease_table thead th').eq($(this).index()).text(); // Change table element ID here
             $(this).html('<input type="text" placeholder="Search ' + title + '" />');
         });
-        // Put in URL to AGOL JSON, build using ArcGIS REST endpoint query tool (query 1=1, fields = *)
-        var url = "https://gis.maine.gov/arcgis/rest/services/dmr/DMR_Aquaculture/MapServer/2/query?where=status+%3D+%27P%27+OR+status+%3D+%27A%27&text=&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&relationParam=&outFields=*&returnGeometry=false&returnTrueCurves=false&maxAllowableOffset=&geometryPrecision=&outSR=&returnIdsOnly=false&returnCountOnly=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&returnZ=false&returnM=false&gdbVersion=&returnDistinctValues=false&resultOffset=&resultRecordCount=&f=pjson";
         // URL to AQ web app
         var aq_map_url = 'https://maine.maps.arcgis.com/apps/webappviewer/index.html?id=b846cf37b1d64c988f89eafa085c8b7a';
         // Layer ID of the AQ Lease layer in the AQ map
@@ -126,9 +162,11 @@ or use class = "custom_table" if only using CSS defined in custom CSS above  -->
             "searching": true, // Toggle search all columns field
             "stateSave": false, // If true, table will restore to user filtered state when page is reopened 				
             "scrollCollapse": true, // If true, the table will be collapsed if the height of the records is < the scrollY option; prevents footer from floating	 		
-
             "ajax": { // Load data from AJAX data source (JSON)
-                "url": url, // JSON URL
+                "url": "https://gis.maine.gov/arcgis/rest/services/dmr/DMR_Aquaculture/MapServer/2/query?where=STATUS+Like+%27%25" +
+                    document.formSelectors.selStatus.value + "%25%27+AND+LEASE_TYPE+Like+%27%25" +
+                    document.formSelectors.selType.value +
+                    "%25%27&text=&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&relationParam=&outFields=*&returnGeometry=false&returnTrueCurves=false&maxAllowableOffset=&geometryPrecision=&outSR=&returnIdsOnly=false&returnCountOnly=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&returnZ=false&returnM=false&gdbVersion=&returnDistinctValues=false&resultOffset=&resultRecordCount=&f=pjson", // JSON URL
                 "dataSrc": "features" // Within the JSON, the source for the data. For AGOL tables this will be "features"
             },
             "columns": [ // Location within the JSON of each column to pipe into the HTML table, in order of columns. For AGOL items, fields stored within attributes array of JSON.
@@ -166,7 +204,7 @@ or use class = "custom_table" if only using CSS defined in custom CSS above  -->
                 },
                 {
                     data: "attributes.Acres",
-                    render: $.fn.dataTable.render.number(',', '.', 1)
+                    render: $.fn.dataTable.render.number(',', '.', 2)
                 } // Use helper to format with commas and round to one decimal place, see here: https://datatables.net/manual/data/renderers#Number-helper
             ],
             "language": {
@@ -174,7 +212,7 @@ or use class = "custom_table" if only using CSS defined in custom CSS above  -->
                 "search": "Search all fields:"
             }
         });
-        // Apply the search, if using search fields for each column; remove if not using.
+        // Apply the search to all fields, if using search fields for each column; remove if not using.
         table.columns().every(function() {
             var that = this;
             $('input', this.footer()).on('keyup change', function() {
@@ -183,6 +221,143 @@ or use class = "custom_table" if only using CSS defined in custom CSS above  -->
                     .draw();
             });
         }); // Remove up to here if not using field searches
+
+        $("#lease_table").on('search.dt', function() {
+            var data = table.column(6, { page: 'current' }).data()
+            if (data.length >= 1) {
+                var total = table.column(6, { page: 'current' }).data().sum();
+                $("#totalAcreage").html('<br>Total Acreage of Selected Leases: ' + total.toFixed(2));
+                console.log(total);
+            }
+        });
+    });
+
+
+
+    function ChangeStatus() {
+        // Get new data when the lease status selector changes
+        var table = $('#lease_table').DataTable();
+        table.clear();
+        table.draw();
+        table.ajax.url("https://gis.maine.gov/arcgis/rest/services/dmr/DMR_Aquaculture/MapServer/2/query?where=STATUS+Like+%27%25" +
+            document.formSelectors.selStatus.value + "%25%27+AND+LEASE_TYPE+Like+%27%25" +
+            document.formSelectors.selType.value +
+            "%25%27&text=&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&relationParam=&outFields=*&returnGeometry=false&returnTrueCurves=false&maxAllowableOffset=&geometryPrecision=&outSR=&returnIdsOnly=false&returnCountOnly=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&returnZ=false&returnM=false&gdbVersion=&returnDistinctValues=false&resultOffset=&resultRecordCount=&f=pjson").load();
+    }
+
+    function ChangeType() {
+        // Get new data when the lease type selector changes
+        var table = $('#lease_table').DataTable();
+        table.clear();
+        table.draw();
+        table.ajax.url("https://gis.maine.gov/arcgis/rest/services/dmr/DMR_Aquaculture/MapServer/2/query?where=STATUS+Like+%27%25" +
+            document.formSelectors.selStatus.value + "%25%27+AND+LEASE_TYPE+Like+%27%25" +
+            document.formSelectors.selType.value +
+            "%25%27&text=&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&relationParam=&outFields=*&returnGeometry=false&returnTrueCurves=false&maxAllowableOffset=&geometryPrecision=&outSR=&returnIdsOnly=false&returnCountOnly=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&returnZ=false&returnM=false&gdbVersion=&returnDistinctValues=false&resultOffset=&resultRecordCount=&f=pjson").load();
+    }
+    </script>
+    <!-- Heading for above the lease applications under review table -->
+    <h3 id="review_list_h">List of lease applications under review.</h3>
+    Click links in the application ID column to open a PDF of the application in a new tab.
+    <!-- Set table ID here and build HTML table. Use DataTables CSS options from https://datatables.net/manual/styling/classes
+or use class = "custom_table" if only using CSS defined in custom CSS above  -->
+    <table id="review_table" class="dataTable" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <!-- Add the column header names for the table here	-->
+                <th width=10>Application ID</th>
+                <th width=10>Applicant</th>
+                <th width=10>Type</th>
+                <th width=10>Latitude</th>
+                <th width=10>Longitude</th>
+                <th width=10>Link to Map</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+    <!-- JavaScript to populate table starts here -->
+    <script type='text/javascript'>
+    $(document).ready(function() {
+        // Put in URL to AGOL JSON, build using ArcGIS REST endpoint query tool (query 1=1, fields = *)
+        var url = "https://gis.maine.gov/arcgis/rest/services/dmr/DMR_Aquaculture/MapServer/0/query?where=1%3D1&text=&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&distance=&units=esriSRUnit_Foot&relationParam=&outFields=*&returnGeometry=false&returnTrueCurves=false&maxAllowableOffset=&geometryPrecision=&outSR=&havingClause=&returnIdsOnly=false&returnCountOnly=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&returnZ=false&returnM=false&gdbVersion=&historicMoment=&returnDistinctValues=false&resultOffset=&resultRecordCount=&returnExtentOnly=false&datumTransformation=&parameterValues=&rangeValues=&quantizationParameters=&featureEncoding=esriDefault&f=pjson";
+        // URL to AQ web app
+        var aq_map_url = 'https://maine.maps.arcgis.com/apps/webappviewer/index.html?id=b846cf37b1d64c988f89eafa085c8b7a';
+        // Layer ID of the review layer in the AQ map
+        var review_layer_id = 'DMR_Aquaculture_7420';
+        // DataTable settings - for more help see here: https://datatables.net/reference/option/
+        var table = $('#review_table').DataTable({ // Change table element ID here
+            dom: 'Bfrtip', // Add this to enable export buttons
+            buttons: [ // Add this to choose which buttons to display
+                'copy',
+                // CSV options
+                {
+                    extend: 'csvHtml5',
+                    title: 'dmr_aq_lpas_export'
+                },
+                // Excel options
+                {
+                    extend: 'excelHtml5',
+                    title: 'dmr_aq_lpas_export'
+                },
+                'print',
+                // PDF options
+                {
+                    extend: 'pdfHtml5',
+                    orientation: 'landscape',
+                    pageSize: 'LETTER',
+                    title: 'dmr_aq_lpas_export'
+                }
+            ],
+            "autoWidth": true, // Feature control DataTables' smart column width handling
+            "deferRender": true, // Feature control deferred rendering for additional speed of initialisation.
+            "info": true, // Display info about table including filtering
+            "lengthChange": false, // If pagination is enabled, allow the page length to be changed by user
+            "ordering": true, // Toggle user ordering of table columns
+            "paging": false, // Toggle table paging
+            "processing": true, // Toggle "processing" indicator useful when loading large table/filter
+            "scrollX": false, // Left/right scrolling option, in pixels or false to disable
+            "scrollY": "400px", // Table height in pixels before up/down scrolling, or false to disable scrolling
+            "searching": true, // Toggle search all columns field
+            "stateSave": false, // If true, table will restore to user filtered state when page is reopened 				
+            "scrollCollapse": true, // If true, the table will be collapsed if the height of the records is < the scrollY option; prevents footer from floating	 		
+
+            "ajax": { // Load data from AJAX data source (JSON)
+                "url": url, // JSON URL
+                "dataSrc": "features" // Within the JSON, the source for the data. For AGOL tables this will be "features"
+            },
+            "columns": [ // Location within the JSON of each column to pipe into the HTML table, in order of columns. For AGOL items, fields stored within attributes array of JSON.
+                // Create a link to the lease PDF
+                {
+                    data: "attributes",
+                    render: function(data, type, row) {
+                        // Generate HTML link using URL and and leaseholder name if URL is not null, or just leaseholder if no URL is present
+                        if (data.Link_To_Ap == null) {
+                            return data.DMR_App_ID
+                        } else {
+                            return '<a href="' + data.Link_To_Ap + '" target="_blank">' + data.DMR_App_ID + '</a>'
+                        }
+                    }
+                },
+                { data: "attributes.Applicant" },
+                { data: "attributes.App_Type" },
+                { data: "attributes.Latitude" },
+                { data: "attributes.Longitude" },
+                // Create a link to the AQ map
+                {
+                    data: "attributes",
+                    render: function(data, type, row) {
+                        // Generate HTML link to AQ web app for given site ID
+                        return '<a href="' + aq_map_url + '&query=' + review_layer_id + ',DMR_App_ID,' + data.DMR_App_ID +
+                            '" target="_blank">View on AQ map</a>'
+                    }
+                },
+            ],
+            "language": {
+                "emptyTable": "Loading...",
+                "search": "Search all fields:"
+            }
+        });
     });
     </script>
     <!-- Heading for above the LPA table -->
@@ -275,7 +450,9 @@ or use class = "custom_table" if only using CSS defined in custom CSS above  -->
             "searching": true, // Toggle search all columns field
             "stateSave": false, // If true, table will restore to user filtered state when page is reopened 				
             "scrollCollapse": true, // If true, the table will be collapsed if the height of the records is < the scrollY option; prevents footer from floating	 		
-
+            "initComplete": function(settings, json) {
+                $("#lpa_table").wrap("<div style='overflow:auto; width:100%;position:relative;'></div>");
+            },
             "ajax": { // Load data from AJAX data source (JSON)
                 "url": url, // JSON URL
                 "dataSrc": "features" // Within the JSON, the source for the data. For AGOL tables this will be "features"
@@ -306,6 +483,8 @@ or use class = "custom_table" if only using CSS defined in custom CSS above  -->
                 "search": "Search all fields:"
             }
         });
+        // Adjust column widths
+        table.columns.adjust();
         // Apply the search, if using search fields for each column; remove if not using.
         table.columns().every(function() {
             var that = this;
