LPA - change heading and add subheading

--- a/aq_table_for_website.html
+++ b/aq_table_for_website.html
@@ -347,7 +347,9 @@ or use class = "custom_table" if only using CSS defined in custom CSS above  -->
     });
     </script>
     <!-- Heading for above the LPA table -->
-    <h3 id="lpa_list_h">List of limited purpose aquaculture leases.</h3>
+    <h3 id="lpa_list_h">List of active Limited Purpose Aquaculture (LPA) Licenses.</h3>
+    Click the Site ID to view the limited purpose lease on the DMR Aquaculture Map app.
+
     <!-- Set table ID here and build HTML table. Use DataTables CSS options from https://datatables.net/manual/styling/classes
 or use class = "custom_table" if only using CSS defined in custom CSS above  -->
     <table id="lpa_table" class="dataTable" cellspacing="0" width="100%">
