Fix X scrolling take 2

--- a/aq_table_for_website.html
+++ b/aq_table_for_website.html
@@ -33,16 +33,12 @@
     }
     </style>
     <!-- Optionally set custom CSS for table here. For help see here: https://www.w3schools.com/css/css_table.asp -->
-    <style type="text/css" class="custom_table">
+    <style type="text/css">
     div.dataTables_wrapper {
         width: 100%;
         margin: 0 auto;
         position: relative;
     }
-    table {
-        border-collapse: collapse;
-    }
-
     th {
         text-align: center;
     }
@@ -50,7 +46,6 @@
     td {
         text-align: center;
     }
-    
     </style>
     <!-- Dropdown selector for lease status  -->
     <p>
