Completed leases - some site report URLs were white space not null, test for starts with http

--- a/aq_table_for_website.html
+++ b/aq_table_for_website.html
@@ -260,7 +260,7 @@ or use class = "custom_table" if only using CSS defined in custom CSS above  -->
                 <th width=10>Latitude</th>
                 <th width=10>Longitude</th>
                 <th width=10>Link to Map</th>
-                <th width=10>Link to Site Review</th>
+                <th width=10>Link to Site Report</th>
             </tr>
         </thead>
         <tbody>
@@ -348,7 +348,7 @@ or use class = "custom_table" if only using CSS defined in custom CSS above  -->
                     data: "attributes",
                     render: function(data, type, row) {
                         // Generate HTML link using URL if present, or null
-                        if (data.Link_To_SR == null) {
+                        if (!(data.Link_To_SR.startsWith("http"))) {
                             return 'No Site Report'
                         } else {
                             return '<a href="' + data.Link_To_SR + '" target="_blank">' + 
