LPA layer fixed to new service and web app

--- a/aq_table_for_website.html
+++ b/aq_table_for_website.html
@@ -419,11 +419,11 @@ or use class = "custom_table" if only using CSS defined in custom CSS above  -->
             $(this).html('<input type="text" placeholder="Search ' + title + '" />');
         });
         // Put in URL to AGOL JSON, build using ArcGIS REST endpoint query tool (query 1=1, fields = *)
-        var url = "https://gis.maine.gov/arcgis/rest/services/dmr/DMR_Aquaculture/MapServer/1/query?where=STATUS%3D%27A%27&text=&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&distance=&units=esriSRUnit_Foot&relationParam=&outFields=*&returnGeometry=false&returnTrueCurves=false&maxAllowableOffset=&geometryPrecision=&outSR=&havingClause=&returnIdsOnly=false&returnCountOnly=false&orderByFields=SITE_ID&groupByFieldsForStatistics=&outStatistics=&returnZ=false&returnM=false&gdbVersion=&historicMoment=&returnDistinctValues=false&resultOffset=&resultRecordCount=&returnExtentOnly=false&datumTransformation=&parameterValues=&rangeValues=&quantizationParameters=&featureEncoding=esriDefault&f=pjson";
+        var url = "https://gis.maine.gov/mapservices/rest/services/dmr/DMR_Aquaculture/MapServer/1/query?where=STATUS%3D%27A%27&text=&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&distance=&units=esriSRUnit_Foot&relationParam=&outFields=*&returnGeometry=false&returnTrueCurves=false&maxAllowableOffset=&geometryPrecision=&outSR=&havingClause=&returnIdsOnly=false&returnCountOnly=false&orderByFields=SITE_ID&groupByFieldsForStatistics=&outStatistics=&returnZ=false&returnM=false&gdbVersion=&historicMoment=&returnDistinctValues=false&resultOffset=&resultRecordCount=&returnExtentOnly=false&datumTransformation=&parameterValues=&rangeValues=&quantizationParameters=&featureEncoding=esriDefault&f=pjson";
         // URL to AQ web app
-        var aq_map_url = 'https://maine.maps.arcgis.com/apps/webappviewer/index.html?id=b846cf37b1d64c988f89eafa085c8b7a';
-        // Layer ID of the AQ Lease layer in the AQ map
-        var lpa_layer_id = 'DMR_Aquaculture_6256';
+        var aq_map_url = 'https://experience.arcgis.com/experience/12b3838db40b4484a6b39858528749ed';
+        // Query string to LPA layer source, application must have selections enabled and zoom to selection on
+        var query_string = '#data_s=where:13fa6ea6032449f7849ce430f879a454-1976558bce4-layer-38:SITE_ID=';
         // DataTable settings - for more help see here: https://datatables.net/reference/option/
         var table = $('#lpa_table').DataTable({ // Change table element ID here
             dom: 'Bfrtip', // Add this to enable export buttons
@@ -471,7 +471,7 @@ or use class = "custom_table" if only using CSS defined in custom CSS above  -->
                     data: "attributes",
                     render: function(data, type, row) {
                         // Generate HTML link to AQ web app for given site ID
-                        return '<a href="' + aq_map_url + '&query=' + lpa_layer_id + ',SITE_ID,' + data.SITE_ID +
+                        return '<a href="' + aq_map_url + query_string + "'" + data.SITE_ID + "'" +
                             '" target="_blank">' + data.SITE_ID + '</a>'
                     }
                 },
